PN-12685: aggiornamento openAPI
